--- a/package.json
+++ b/package.json
@@ -5,14 +5,26 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node server.js",
+    "build": "node_modules/.bin/webpack",
+    "watch": "node_modules/.bin/webpack -w",
+    "serve": "webpack -w",
+    "mon": "nodemon server.js"
   },
   "dependencies": {
     "body-parser": "^1.17.2",
     "express": "^4.15.3",
+    "react": "^15.6.1",
+    "react-dom": "^15.6.1",
     "ws": "^1.1.4"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "babel-core": "^6.25.0",
+    "babel-loader": "^7.1.1",
+    "babel-preset-env": "^1.6.0",
+    "babel-preset-react": "^6.24.1",
+    "webpack": "^3.4.1"
+  },
   "author": "",
   "license": "ISC"
 }
