--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,11 @@
-**/node_modules/
-**/.idea/
+node_modules/
 config/
+
+**/.idea/
 
 public/bundle.js
 public/bundle.js.map
 
-.eslintrc.json
-.eslintignore
+# .eslintrc.json
+# .eslintignore
 npm-debug.log
