--- a/package.json
+++ b/package.json
@@ -6,26 +6,29 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
-    "build": "node_modules/.bin/webpack",
-    "watch": "node_modules/.bin/webpack -w",
-    "serve": "webpack -w",
+    "build": "node_modules/.bin/webpack --color --progress",
+    "watch": "node_modules/.bin/webpack -w --color --progress",
+    "serve": "webpack -w --color --progress",
     "mon": "nodemon server.js"
   },
   "dependencies": {
-    "body-parser": "^1.17.2",
-    "express": "^4.15.3",
-    "react": "^15.6.1",
-    "react-dom": "^15.6.1",
-    "ws": "^1.1.4"
-  },
-  "devDependencies": {
     "babel-core": "^6.25.0",
     "babel-loader": "^7.1.1",
+    "babel-polyfill": "^6.23.0",
     "babel-preset-env": "^1.6.0",
+    "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
-    "short-id": "0.1.0-1",
-    "webpack": "^3.4.1"
+    "babel-preset-stage-0": "^6.24.1",
+    "body-parser": "^1.17.2",
+    "express": "^4.15.4",
+    "prop-types": "^15.5.10",
+    "react": "^15.6.1",
+    "react-dom": "^15.6.1",
+    "shortid": "^2.2.8",
+    "webpack": "^3.5.4",
+    "ws": "^3.1.0"
   },
+  "devDependencies": {},
   "author": "",
   "license": "ISC"
 }
