--- a/package.json
+++ b/package.json
@@ -24,6 +24,9 @@
     "prop-types": "^15.6.0",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
+    "react-redux": "^5.0.6",
+    "redux": "^3.7.2",
+    "redux-saga": "^0.16.0",
     "shortid": "^2.2.8",
     "webpack": "^3.8.1",
     "ws": "^3.2.0"
