--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-redux": "^5.0.6",
     "redux": "^3.7.2",
     "redux-saga": "^0.16.0",
+    "redux-thunk": "^2.2.0",
     "shortid": "^2.2.8",
     "webpack": "^3.8.1",
     "ws": "^3.2.0"
