Rename name to nickname, id to clientId. Use 2 static methods

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -35,6 +35,10 @@
       "peerDependencies": false
     }],
     "linebreak-style": ["off", "unix"],
+    "object-curly-newline": ["error", {
+      "minProperties": 5,
+      "consistent": true
+    }],
     "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }]
   },
   "settings": {
