--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "build": "webpack --color --progress",
     "watch": "node_modules/.bin/webpack -w --color --progress",
     "serve": "webpack -w --color --progress",
-    "mon": "nodemon server.js"
+    "mon": "nodemon server.js",
+    "debug": "node --inspect-brk server.js",
+    "mondeb": "nodemon --inspect-brk=9229 server.js"
   },
   "dependencies": {
     "babel-core": "^6.26.0",
