--- a/package.json
+++ b/package.json
@@ -20,17 +20,24 @@
     "babel-preset-env": "^1.6.1",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
-    "babel-preset-stage-0": "^6.24.1",
+    "babel-preset-stage-3": "^6.24.1",
     "body-parser": "^1.18.2",
+    "css-loader": "^0.28.7",
     "express": "^4.16.2",
+    "node-sass": "^4.5.3",
     "prop-types": "^15.6.0",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
+    "sass-loader": "^6.0.6",
     "shortid": "^2.2.8",
+    "style-loader": "^0.19.0",
     "webpack": "^3.8.1",
     "ws": "^3.2.0"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "postcss-loader": "^2.0.8",
+    "resolve-url-loader": "^2.2.0"
+  },
   "author": "",
   "license": "ISC"
 }
