--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "ws": "^3.2.0"
   },
   "devDependencies": {
+    "autoprefixer": "^7.1.6",
     "postcss-loader": "^2.0.8",
     "resolve-url-loader": "^2.2.0"
   },
