--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -26,7 +26,7 @@
       "__dirname": false
   },
   "extends": ["airbnb", "plugin:react/all"],
-  "plugins": ["react"],
+  "plugins": ["react", "compat"],
   "rules": {
     "comma-dangle": ["error", "never"],
     "import/no-extraneous-dependencies": ["error", {
