--- a/package.json
+++ b/package.json
@@ -18,27 +18,55 @@
     "babel-loader": "^7.1.2",
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.6.1",
-    "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-3": "^6.24.1",
     "body-parser": "^1.18.2",
     "css-loader": "^0.28.7",
     "express": "^4.16.2",
-    "node-sass": "^4.7.1",
+    "node-sass": "^4.7.2",
     "prop-types": "^15.6.0",
     "react": "^16.1.1",
     "react-dom": "^16.1.1",
     "sass-loader": "^6.0.6",
     "shortid": "^2.2.8",
     "style-loader": "^0.19.0",
+    "validator": "^9.1.1",
     "webpack": "^3.8.1",
     "ws": "^3.3.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.6",
     "postcss-loader": "^2.0.8",
+    "postcss-normalize": "^4.0.0",
     "postcss-scss": "^1.0.2",
-    "resolve-url-loader": "^2.2.0"
+    "resolve-url-loader": "^2.2.0",
+    "stylelint-config-standard": "^17.0.0",
+    "stylelint-no-unsupported-browser-features": "^1.0.1",
+    "stylelint-order": "^0.7.0",
+    "stylelint-scss": "^2.1.0"
+  },
+  "browserslist": [
+    "> 0.3%",
+    "last 2 versions"
+  ],
+  "stylelint": {
+    "extends": "stylelint-config-standard",
+    "plugins": [
+      "stylelint-no-unsupported-browser-features",
+      "stylelint-scss",
+      "stylelint-order"
+    ],
+    "rules": {
+      "plugin/no-unsupported-browser-features": [
+        true,
+        {
+          "severity": "warning",
+          "ignore": [
+            "rem"
+          ]
+        }
+      ]
+    }
   },
   "author": "",
   "license": "ISC"
