--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "lil-chat",
+  "name": "md-chat-thunks",
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
@@ -27,12 +27,13 @@
     "express": "^4.16.2",
     "node-sass": "^4.7.2",
     "prop-types": "^15.6.0",
-    "react-redux": "^5.0.6",
-    "redux": "^3.7.2",
-    "redux-saga": "^0.16.0",
-    "redux-thunk": "^2.2.0",
     "react": "^16.1.1",
     "react-dom": "^16.1.1",
+    "react-redux": "^5.0.6",
+    "redux": "^3.7.2",
+    "redux-logger": "^3.0.6",
+    "redux-saga": "^0.16.0",
+    "redux-thunk": "^2.2.0",
     "sass-loader": "^6.0.6",
     "shortid": "^2.2.8",
     "style-loader": "^0.19.0",
@@ -47,7 +48,7 @@
     "postcss-normalize": "^4.0.0",
     "postcss-scss": "^1.0.2",
     "resolve-url-loader": "^2.2.0",
-    "stylelint-config-standard": "^17.0.0",
+    "stylelint-config-standard": "^18.0.0",
     "stylelint-no-unsupported-browser-features": "^1.0.1",
     "stylelint-order": "^0.7.0",
     "stylelint-scss": "^2.1.0",
