--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
+    "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
@@ -47,7 +48,9 @@
     "postcss-loader": "^2.0.9",
     "postcss-normalize": "^4.0.0",
     "postcss-scss": "^1.0.2",
+    "redux-immutable-state-invariant": "^2.1.0",
     "resolve-url-loader": "^2.2.0",
+    "stylelint": "^8.3.1",
     "stylelint-config-standard": "^18.0.0",
     "stylelint-no-unsupported-browser-features": "^1.0.1",
     "stylelint-order": "^0.7.0",
