--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "body-parser": "^1.18.2",
     "css-loader": "^0.28.7",
     "express": "^4.16.2",
+    "lodash.throttle": "^4.1.1",
     "node-sass": "^4.7.2",
     "prop-types": "^15.6.0",
     "react": "^16.2.0",
@@ -44,7 +45,7 @@
     "ws": "^3.3.2"
   },
   "devDependencies": {
-    "autoprefixer": "^7.2.1",
+    "autoprefixer": "^7.2.2",
     "file-loader": "^1.1.5",
     "postcss": "^6.0.14",
     "postcss-loader": "^2.0.9",
@@ -59,7 +60,7 @@
     "stylelint-scss": "^2.2.0",
     "url-loader": "^0.6.2",
     "webpack-dev-middleware": "^1.12.2",
-    "webpack-dev-server": "^2.9.5"
+    "webpack-dev-server": "^2.9.7"
   },
   "browserslist": [
     "> 0.3%",
