--- a/package.json
+++ b/package.json
@@ -8,10 +8,11 @@
     "start": "npm run build && node server.js",
     "build": "webpack -p --color --progress",
     "cbuild": "cross-env NODE_ENV=production webpack -p --color --progress",
-    "build-dev": "webpack --color --progress",
+    "build-dev": "webpack --env development --color --progress",
     "build-prod": "webpack -p --env production --color --progress",
     "watch": "webpack -w --color --progress",
     "srv": "webpack-dev-server --progress --color",
+    "serve": "webpack-dev-server --env development --progress --color",
     "srv-prod": "webpack-dev-server -p --env production --progress --color",
     "up": "node server.js",
     "mon": "nodemon server.js",
@@ -19,6 +20,7 @@
     "mondeb": "nodemon --inspect=9229 server.js"
   },
   "dependencies": {
+    "autoprefixer": "^7.2.4",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-plugin-transform-class-properties": "^6.24.1",
@@ -27,11 +29,18 @@
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-3": "^6.24.1",
     "body-parser": "^1.18.2",
+    "cross-env": "^5.1.3",
     "css-loader": "^0.28.7",
     "express": "^4.16.2",
+    "extract-text-webpack-plugin": "^3.0.2",
+    "file-loader": "^1.1.6",
     "lodash.throttle": "^4.1.1",
     "node-sass": "^4.7.2",
     "normalize.css": "^7.0.0",
+    "postcss": "^6.0.15",
+    "postcss-loader": "^2.0.10",
+    "postcss-sass": "^0.2.0",
+    "postcss-scss": "^1.0.2",
     "prop-types": "^15.6.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
@@ -44,26 +53,18 @@
     "sass-loader": "^6.0.6",
     "shortid": "^2.2.8",
     "style-loader": "^0.19.1",
+    "url-loader": "^0.6.2",
     "validator": "^9.2.0",
     "webpack": "^3.10.0",
     "ws": "^3.3.3"
   },
   "devDependencies": {
-    "autoprefixer": "^7.2.3",
-    "cross-env": "^5.1.3",
-    "file-loader": "^1.1.6",
-    "postcss": "^6.0.14",
-    "postcss-loader": "^2.0.9",
-    "postcss-sass": "^0.2.0",
-    "postcss-scss": "^1.0.2",
     "redux-immutable-state-invariant": "^2.1.0",
     "stylelint": "^8.4.0",
     "stylelint-config-standard": "^18.0.0",
-    "stylelint-no-unsupported-browser-features": "^1.0.1",
+    "stylelint-no-unsupported-browser-features": "^2.0.0",
     "stylelint-order": "^0.8.0",
     "stylelint-scss": "^2.2.0",
-    "url-loader": "^0.6.2",
-    "webpack-dev-middleware": "^2.0.2",
     "webpack-dev-server": "^2.9.7"
   },
   "browserslist": [
