--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "babel-preset-stage-3": "^6.24.1",
     "body-parser": "^1.18.2",
     "cross-env": "^5.1.3",
-    "css-loader": "^0.28.8",
+    "css-loader": "^0.28.9",
     "express": "^4.16.2",
     "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^1.1.6",
@@ -38,7 +38,7 @@
     "normalize.css": "^7.0.0",
     "postcss": "^6.0.16",
     "postcss-loader": "^2.0.10",
-    "postcss-sass": "^0.2.0",
+    "postcss-sass": "^0.3.0",
     "postcss-scss": "^1.0.3",
     "prop-types": "^15.6.0",
     "react": "^16.2.0",
@@ -59,13 +59,17 @@
     "ws": "^4.0.0"
   },
   "devDependencies": {
+    "clean-webpack-plugin": "^0.1.17",
+    "html-webpack-plugin": "^2.30.1",
+    "html-webpack-template": "^6.1.0",
     "redux-immutable-state-invariant": "^2.1.0",
     "stylelint": "^8.4.0",
     "stylelint-config-standard": "^18.0.0",
     "stylelint-no-unsupported-browser-features": "^2.0.0",
     "stylelint-order": "^0.8.0",
     "stylelint-scss": "^2.2.0",
-    "webpack-dev-server": "^2.11.0"
+    "webpack-dev-server": "^2.11.0",
+    "webpack-merge": "^4.1.1"
   },
   "browserslist": [
     "> 0.3%",
