--- a/package.json
+++ b/package.json
@@ -11,9 +11,8 @@
     "build-dev": "webpack --env development --color --progress",
     "build-prod": "webpack -p --env production --color --progress",
     "watch": "webpack -w --color --progress",
-    "srv": "webpack-dev-server --progress --color",
-    "serve": "webpack-dev-server --env development --progress --color",
-    "srv-prod": "webpack-dev-server -p --env production --progress --color",
+    "srv": "webpack-dev-server --color",
+    "serve": "webpack-dev-server --env development --color",
     "up": "node server.js",
     "mon": "nodemon server.js",
     "debug": "node --inspect-brk=9229 server.js",
@@ -30,17 +29,17 @@
     "babel-preset-stage-3": "^6.24.1",
     "body-parser": "^1.18.2",
     "cross-env": "^5.1.3",
-    "css-loader": "^0.28.7",
+    "css-loader": "^0.28.8",
     "express": "^4.16.2",
     "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^1.1.6",
     "lodash.throttle": "^4.1.1",
     "node-sass": "^4.7.2",
     "normalize.css": "^7.0.0",
-    "postcss": "^6.0.15",
+    "postcss": "^6.0.16",
     "postcss-loader": "^2.0.10",
     "postcss-sass": "^0.2.0",
-    "postcss-scss": "^1.0.2",
+    "postcss-scss": "^1.0.3",
     "prop-types": "^15.6.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
@@ -65,7 +64,7 @@
     "stylelint-no-unsupported-browser-features": "^2.0.0",
     "stylelint-order": "^0.8.0",
     "stylelint-scss": "^2.2.0",
-    "webpack-dev-server": "^2.9.7"
+    "webpack-dev-server": "^2.10.0"
   },
   "browserslist": [
     "> 0.3%",
