--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
   },
   "devDependencies": {
     "clean-webpack-plugin": "^0.1.18",
+    "favicons-webpack-plugin": "0.0.7",
     "html-webpack-plugin": "^2.30.1",
     "html-webpack-template": "^6.1.0",
     "redux-immutable-state-invariant": "^2.1.0",
