--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
     "mondeb": "nodemon --inspect=9229 server.js"
   },
   "dependencies": {
-    "autoprefixer": "^8.1.0",
-    "babel-core": "^6.26.0",
+    "autoprefixer": "^8.4.1",
+    "babel-core": "^6.26.3",
     "babel-loader": "^7.1.4",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-polyfill": "^6.26.0",
@@ -33,42 +33,42 @@
     "express": "^4.16.3",
     "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^1.1.11",
+    "html-webpack-plugin": "^3.2.0",
     "lodash.throttle": "^4.1.1",
-    "node-sass": "^4.8.3",
+    "node-sass": "^4.9.0",
     "normalize.css": "^8.0.0",
-    "postcss": "^6.0.20",
-    "postcss-loader": "^2.1.3",
-    "postcss-sass": "^0.3.0",
-    "postcss-scss": "^1.0.4",
+    "postcss": "^6.0.22",
+    "postcss-loader": "^2.1.4",
+    "postcss-scss": "^1.0.5",
     "prop-types": "^15.6.1",
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0",
+    "react": "^16.3.2",
+    "react-dom": "^16.3.2",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
-    "redux": "^3.7.2",
+    "redux": "^4.0.0",
     "redux-logger": "^3.0.6",
     "redux-saga": "^0.16.0",
     "redux-thunk": "^2.2.0",
     "resolve-url-loader": "^2.3.0",
-    "sass-loader": "^6.0.7",
     "shortid": "^2.2.8",
-    "style-loader": "^0.20.3",
     "url-loader": "^1.0.1",
-    "validator": "^9.4.1",
-    "webpack": "^3.11.0",
+    "webpack": "^4.7.0",
+    "webpack-cli": "^2.1.2",
     "ws": "^4.1.0"
   },
   "devDependencies": {
     "clean-webpack-plugin": "^0.1.19",
-    "html-webpack-plugin": "^3.0.7",
-    "html-webpack-template": "^6.1.0",
+    "html-webpack-template": "^6.2.0",
+    "postcss-sass": "^0.3.1",
     "redux-immutable-state-invariant": "^2.1.0",
-    "stylelint": "^9.1.3",
+    "sass-loader": "^7.0.1",
+    "style-loader": "^0.21.0",
+    "stylelint": "^9.2.0",
     "stylelint-config-standard": "^18.2.0",
-    "stylelint-no-unsupported-browser-features": "^2.0.0",
+    "stylelint-no-unsupported-browser-features": "^3.0.0",
     "stylelint-order": "^0.8.1",
-    "stylelint-scss": "^2.5.0",
-    "webpack-dev-server": "^2.11.2",
+    "stylelint-scss": "^3.1.0",
+    "webpack-dev-server": "^3.1.4",
     "webpack-merge": "^4.1.2"
   },
   "browserslist": [
