--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "node-sass": "^4.9.0",
     "normalize.css": "^8.0.0",
     "postcss": "^6.0.22",
-    "postcss-loader": "^2.1.4",
+    "postcss-loader": "^2.1.5",
     "postcss-scss": "^1.0.5",
     "prop-types": "^15.6.1",
     "react": "^16.3.2",
@@ -54,12 +54,13 @@
     "url-loader": "^1.0.1",
     "webpack": "^4.7.0",
     "webpack-cli": "^2.1.2",
-    "ws": "^4.1.0"
+    "ws": "^5.1.1"
   },
   "devDependencies": {
     "clean-webpack-plugin": "^0.1.19",
     "html-webpack-template": "^6.2.0",
     "postcss-sass": "^0.3.1",
+    "redux-freeze": "^0.1.5",
     "redux-immutable-state-invariant": "^2.1.0",
     "sass-loader": "^7.0.1",
     "style-loader": "^0.21.0",
