--- a/package.json
+++ b/package.json
@@ -19,49 +19,54 @@
     "mondeb": "nodemon --inspect=9229 server.js"
   },
   "dependencies": {
-    "autoprefixer": "^8.4.1",
-    "babel-core": "^6.26.3",
-    "babel-loader": "^7.1.4",
-    "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-polyfill": "^6.26.0",
-    "babel-preset-env": "^1.6.1",
-    "babel-preset-react": "^6.24.1",
-    "babel-preset-stage-3": "^6.24.1",
     "body-parser": "^1.18.2",
-    "cross-env": "^5.1.4",
-    "css-loader": "^0.28.11",
+    "bootstrap": "^4.1.1",
     "express": "^4.16.3",
-    "extract-text-webpack-plugin": "^3.0.2",
-    "file-loader": "^1.1.11",
-    "html-webpack-plugin": "^3.2.0",
+    "lodash.merge": "^4.6.1",
     "lodash.throttle": "^4.1.1",
-    "node-sass": "^4.9.0",
     "normalize.css": "^8.0.0",
-    "postcss": "^6.0.22",
-    "postcss-loader": "^2.1.5",
-    "postcss-scss": "^1.0.5",
+    "normalizr": "^3.2.4",
     "prop-types": "^15.6.1",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
+    "react-router-prop-types": "^1.0.3",
+    "reactstrap": "^6.0.1",
     "redux": "^4.0.0",
-    "redux-logger": "^3.0.6",
     "redux-saga": "^0.16.0",
     "redux-thunk": "^2.2.0",
-    "resolve-url-loader": "^2.3.0",
+    "reselect": "^3.0.1",
+    "sanitize.css": "^5.0.0",
     "shortid": "^2.2.8",
-    "url-loader": "^1.0.1",
-    "webpack": "^4.7.0",
-    "webpack-cli": "^2.1.2",
+    "uuid": "^3.2.1",
+    "whatwg-fetch": "^2.0.3",
     "ws": "^5.1.1"
   },
   "devDependencies": {
+    "autoprefixer": "^8.4.1",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^7.1.4",
+    "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-preset-env": "^1.6.1",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-3": "^6.24.1",
     "clean-webpack-plugin": "^0.1.19",
+    "cross-env": "^5.1.4",
+    "css-loader": "^0.28.11",
+    "file-loader": "^1.1.11",
+    "html-webpack-plugin": "^3.2.0",
     "html-webpack-template": "^6.2.0",
+    "node-sass": "^4.9.0",
+    "postcss": "^6.0.22",
+    "postcss-loader": "^2.1.5",
     "postcss-sass": "^0.3.1",
+    "postcss-scss": "^1.0.5",
     "redux-freeze": "^0.1.5",
     "redux-immutable-state-invariant": "^2.1.0",
+    "redux-logger": "^3.0.6",
+    "resolve-url-loader": "^2.3.0",
     "sass-loader": "^7.0.1",
     "style-loader": "^0.21.0",
     "stylelint": "^9.2.0",
@@ -69,6 +74,9 @@
     "stylelint-no-unsupported-browser-features": "^3.0.0",
     "stylelint-order": "^0.8.1",
     "stylelint-scss": "^3.1.0",
+    "url-loader": "^1.0.1",
+    "webpack": "^4.7.0",
+    "webpack-cli": "^2.1.2",
     "webpack-dev-server": "^3.1.4",
     "webpack-merge": "^4.1.2"
   },
