--- a/package.json
+++ b/package.json
@@ -6,13 +6,11 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "npm run build && node server.js",
-    "build": "webpack -p --color --progress",
-    "cbuild": "cross-env NODE_ENV=production webpack -p --color --progress",
-    "build-dev": "webpack --env development --color --progress",
-    "build-prod": "webpack -p --env production --color --progress",
+    "build": "cross-env NODE_ENV=production webpack --color --progress",
+    "build-dev": "webpack --color --progress",
     "watch": "webpack -w --color --progress",
-    "srv": "webpack-dev-server --color",
-    "serve": "webpack-dev-server --env development --color",
+    "watch-p": "cross-env NODE_ENV=production webpack -w --color --progress",
+    "serve": "webpack-dev-server --color",
     "up": "node server.js",
     "mon": "nodemon server.js",
     "debug": "node --inspect-brk=9229 server.js",
@@ -55,14 +53,18 @@
     "clean-webpack-plugin": "^0.1.19",
     "cross-env": "^5.1.4",
     "css-loader": "^0.28.11",
+    "duplicate-package-checker-webpack-plugin": "^3.0.0",
     "file-loader": "^1.1.11",
     "html-webpack-plugin": "^3.2.0",
     "html-webpack-template": "^6.2.0",
+    "mini-css-extract-plugin": "^0.4.0",
     "node-sass": "^4.9.0",
+    "optimize-css-assets-webpack-plugin": "^4.0.1",
     "postcss": "^6.0.22",
     "postcss-loader": "^2.1.5",
     "postcss-sass": "^0.3.1",
     "postcss-scss": "^1.0.5",
+    "react-hot-loader": "^4.1.2",
     "redux-freeze": "^0.1.5",
     "redux-immutable-state-invariant": "^2.1.0",
     "redux-logger": "^3.0.6",
@@ -74,11 +76,14 @@
     "stylelint-no-unsupported-browser-features": "^3.0.0",
     "stylelint-order": "^0.8.1",
     "stylelint-scss": "^3.1.0",
+    "uglifyjs-webpack-plugin": "^1.2.5",
     "url-loader": "^1.0.1",
     "webpack": "^4.7.0",
+    "webpack-bundle-analyzer": "^2.11.1",
     "webpack-cli": "^2.1.2",
     "webpack-dev-server": "^3.1.4",
-    "webpack-merge": "^4.1.2"
+    "webpack-merge": "^4.1.2",
+    "webpack-visualizer-plugin": "^0.1.11"
   },
   "browserslist": [
     "> 0.3%",
