--- a/package.json
+++ b/package.json
@@ -46,14 +46,18 @@
     "autoprefixer": "^8.4.1",
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.4",
+    "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-plugin-transform-react-jsx-source": "^6.22.0",
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-3": "^6.24.1",
     "clean-webpack-plugin": "^0.1.19",
+    "compression-webpack-plugin": "^1.1.11",
     "cross-env": "^5.1.4",
     "css-loader": "^0.28.11",
     "duplicate-package-checker-webpack-plugin": "^3.0.0",
+    "fast-async": "^6.3.7",
     "file-loader": "^1.1.11",
     "html-webpack-plugin": "^3.2.0",
     "html-webpack-template": "^6.2.0",
@@ -78,9 +82,9 @@
     "stylelint-scss": "^3.1.0",
     "uglifyjs-webpack-plugin": "^1.2.5",
     "url-loader": "^1.0.1",
-    "webpack": "^4.7.0",
+    "webpack": "^4.8.0",
     "webpack-bundle-analyzer": "^2.11.1",
-    "webpack-cli": "^2.1.2",
+    "webpack-cli": "^2.1.3",
     "webpack-dev-server": "^3.1.4",
     "webpack-merge": "^4.1.2",
     "webpack-visualizer-plugin": "^0.1.11"
@@ -109,6 +113,6 @@
     }
   },
   "author": "",
-  "repository": "https://github.com/j-cong/md-chat-thunks",
+  "repository": "",
   "license": "ISC"
 }
