--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express": "^4.16.3",
     "lodash.merge": "^4.6.1",
     "lodash.throttle": "^4.1.1",
+    "lowdb": "^1.0.0",
     "normalize.css": "^8.0.0",
     "normalizr": "^3.2.4",
     "prop-types": "^15.6.1",
@@ -49,12 +50,12 @@
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-react-jsx-source": "^6.22.0",
-    "babel-preset-env": "^1.6.1",
+    "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-3": "^6.24.1",
     "clean-webpack-plugin": "^0.1.19",
     "compression-webpack-plugin": "^1.1.11",
-    "cross-env": "^5.1.4",
+    "cross-env": "^5.1.5",
     "css-loader": "^0.28.11",
     "duplicate-package-checker-webpack-plugin": "^3.0.0",
     "fast-async": "^6.3.7",
@@ -68,7 +69,7 @@
     "postcss-loader": "^2.1.5",
     "postcss-sass": "^0.3.1",
     "postcss-scss": "^1.0.5",
-    "react-hot-loader": "^4.1.2",
+    "react-hot-loader": "^4.1.3",
     "redux-freeze": "^0.1.5",
     "redux-immutable-state-invariant": "^2.1.0",
     "redux-logger": "^3.0.6",
@@ -82,8 +83,8 @@
     "stylelint-scss": "^3.1.0",
     "uglifyjs-webpack-plugin": "^1.2.5",
     "url-loader": "^1.0.1",
-    "webpack": "^4.8.0",
-    "webpack-bundle-analyzer": "^2.11.1",
+    "webpack": "^4.8.1",
+    "webpack-bundle-analyzer": "^2.11.2",
     "webpack-cli": "^2.1.3",
     "webpack-dev-server": "^3.1.4",
     "webpack-merge": "^4.1.2",
