--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "body-parser": "^1.18.2",
     "bootstrap": "^4.1.1",
     "express": "^4.16.3",
+    "lodash-id": "^0.14.0",
     "lodash.merge": "^4.6.1",
     "lodash.throttle": "^4.1.1",
     "lowdb": "^1.0.0",
