--- a/package.json
+++ b/package.json
@@ -13,18 +13,24 @@
     "serve": "webpack-dev-server --color",
     "up": "node server.js",
     "mon": "nodemon -i db.json -V server.js",
+    "nodemon": "nodemon server.js",
     "debug": "node --inspect-brk=9229 server.js",
-    "mondeb": "nodemon --inspect=9229 server.js"
+    "mondeb": "nodemon --inspect=9229 server.js",
+    "mongotest": "node mongotest.js"
   },
   "dependencies": {
     "babel-polyfill": "^6.26.0",
     "body-parser": "^1.18.3",
     "bootstrap": "^4.1.1",
     "express": "^4.16.3",
+    "express-winston": "^2.5.1",
     "lodash-id": "^0.14.0",
     "lodash.merge": "^4.6.1",
     "lodash.throttle": "^4.1.1",
     "lowdb": "^1.0.0",
+    "mongodb": "^3.0.10",
+    "mongoose": "^5.1.4",
+    "morgan": "^1.9.0",
     "normalize.css": "^8.0.0",
     "normalizr": "^3.2.4",
     "prop-types": "^15.6.1",
@@ -43,6 +49,7 @@
     "shortid": "^2.2.8",
     "uuid": "^3.2.1",
     "whatwg-fetch": "^2.0.3",
+    "winston": "^2.4.2",
     "ws": "^5.2.0"
   },
   "devDependencies": {
