--- a/package.json
+++ b/package.json
@@ -2,20 +2,20 @@
   "name": "md-chat-thunks",
   "version": "1.0.0",
   "description": "Chat app built with React, Redux, NodeJS, websocket and styled using Material Design elements",
-  "main": "server.js",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "npm run build && node server.js",
+    "start": "npm run build && node app.js",
     "build": "cross-env NODE_ENV=production webpack --color --progress",
     "build-dev": "webpack --color --progress",
     "watch": "webpack -w --color --progress",
     "watch-p": "cross-env NODE_ENV=production webpack -w --color --progress",
     "serve": "webpack-dev-server --color",
-    "up": "node server.js",
-    "mon": "nodemon -i db.json -V server.js",
-    "nodemon": "nodemon server.js",
-    "debug": "node --inspect-brk=9229 server.js",
-    "mondeb": "nodemon --inspect=9229 server.js",
+    "up": "node app.js",
+    "mon": "nodemon -i db.json -V app.js",
+    "nodemon": "nodemon app.js",
+    "debug": "node --inspect-brk=9229 app.js",
+    "mondeb": "nodemon --inspect=9229 app.js",
     "mongotest": "node mongotest.js"
   },
   "dependencies": {
