Update webpack config and .gitignore, remove tmp files from index

--- a/.gitignore
+++ b/.gitignore
@@ -7,8 +7,8 @@ build/
 
 # TEMP:
 build/assets/
+public/**
 
-# public/
 public/assets/
 src/assets/
 
@@ -30,7 +30,7 @@ npm-debug.log
 yarn-error.log
 **/.idea/
 **/.vscode/
-TEMP/
-TMP/
-temp/
-tmp/
+**/TEMP/
+**/TMP/
+**/temp/
+**/tmp/
