--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "ws": "^5.2.1"
   },
   "devDependencies": {
+    "@intervolga/optimize-cssnano-plugin": "^1.0.5",
     "autoprefixer": "^8.6.5",
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.5",
@@ -66,6 +67,7 @@
     "compression-webpack-plugin": "^1.1.11",
     "cross-env": "^5.2.0",
     "css-loader": "^1.0.0",
+    "cssnano": "^4.0.0",
     "duplicate-package-checker-webpack-plugin": "^3.0.0",
     "fast-async": "^6.3.7",
     "file-loader": "^1.1.11",
