--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-3": "^6.24.1",
+    "circular-dependency-plugin": "^5.0.2",
     "clean-webpack-plugin": "^0.1.19",
     "compression-webpack-plugin": "^1.1.11",
     "cross-env": "^5.2.0",
