--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     "mongotest": "node mongotest.js"
   },
   "dependencies": {
+    "await-to-js": "^2.0.1",
     "babel-polyfill": "^6.26.0",
     "body-parser": "^1.18.3",
     "bootstrap": "^4.1.3",
+    "dotenv-safe": "^6.0.0",
     "express": "^4.16.3",
     "express-winston": "^2.6.0",
     "lodash-id": "^0.14.0",
@@ -47,6 +49,8 @@
     "reselect": "^3.0.1",
     "sanitize.css": "^6.0.0",
     "shortid": "^2.2.12",
+    "socket.io": "^2.1.1",
+    "socket.io-client": "^2.1.1",
     "uuid": "^3.3.2",
     "whatwg-fetch": "^2.0.4",
     "winston": "^2.4.3",
