--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "dotenv-safe": "^6.0.0",
     "express": "^4.16.3",
     "express-winston": "^2.6.0",
+    "jsonwebtoken": "^8.3.0",
     "lodash-id": "^0.14.0",
     "lodash.merge": "^4.6.1",
     "lodash.throttle": "^4.1.1",
