--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "babel-polyfill": "^6.26.0",
     "body-parser": "^1.18.3",
     "bootstrap": "^4.1.3",
+    "date-fns": "^1.29.0",
     "dotenv-safe": "^6.0.0",
     "express": "^4.16.3",
     "express-winston": "^2.6.0",
