--- a/package.json
+++ b/package.json
@@ -1,66 +1,66 @@
 {
   "name": "md-chat-thunks",
   "version": "1.0.0",
-  "description": "Chat app built with React, Redux, NodeJS, websocket and styled using Material Design elements",
-  "main": "app.js",
+  "description": "Chat app built with React, Redux, NodeJS, websockets, MongoDB and styled using Bootstrap components",
+  "main": "server/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "npm run build && node app.js",
+    "start": "npm run build && node server/index.js",
     "build": "cross-env NODE_ENV=production webpack --color --progress",
     "build-dev": "webpack --color --progress",
     "watch": "webpack -w --color --progress",
     "watch-p": "cross-env NODE_ENV=production webpack -w --color --progress",
     "serve": "webpack-dev-server --color",
-    "up": "node app.js",
-    "mon": "nodemon -i db.json -V app.js",
-    "nodemon": "nodemon app.js",
-    "debug": "node --inspect-brk=9229 app.js",
-    "mondeb": "nodemon --inspect=9229 app.js",
+    "up": "node server/index.js",
+    "mon": "nodemon -i db.json -V server/index.js",
+    "nodemon": "nodemon server/index.js",
+    "debug": "node --inspect-brk=9229 server/index.js",
+    "mondeb": "nodemon --inspect=9229 server/index.js",
     "mongotest": "node mongotest.js"
   },
   "dependencies": {
-    "await-to-js": "^2.0.1",
+    "await-to-js": "^2.1.1",
     "babel-polyfill": "^6.26.0",
-    "body-parser": "^1.18.3",
-    "bootstrap": "^4.1.3",
-    "date-fns": "^1.29.0",
-    "dotenv-safe": "^6.0.0",
-    "express": "^4.16.3",
+    "body-parser": "^1.19.0",
+    "bootstrap": "^4.3.1",
+    "date-fns": "^1.30.1",
+    "dotenv-safe": "^6.1.0",
+    "express": "^4.16.4",
     "express-winston": "^2.6.0",
-    "jsonwebtoken": "^8.3.0",
+    "jsonwebtoken": "^8.5.1",
     "lodash-id": "^0.14.0",
     "lodash.merge": "^4.6.1",
     "lodash.throttle": "^4.1.1",
     "lowdb": "^1.0.0",
-    "mongodb": "^3.1.6",
-    "mongoose": "^5.2.14",
+    "mongodb": "^3.2.4",
+    "mongoose": "^5.5.7",
     "morgan": "^1.9.1",
-    "normalize.css": "^8.0.0",
-    "normalizr": "^3.2.4",
-    "prop-types": "^15.6.2",
-    "react": "^16.5.1",
-    "react-dom": "^16.5.1",
-    "react-redux": "^5.0.7",
+    "normalize.css": "^8.0.1",
+    "normalizr": "^3.3.0",
+    "prop-types": "^15.7.2",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
+    "react-redux": "^6.0.1",
     "react-router-dom": "^4.3.1",
     "react-router-prop-types": "^1.0.4",
-    "reactstrap": "^6.4.0",
-    "redux": "^4.0.0",
+    "reactstrap": "^7.1.0",
+    "redux": "^4.0.1",
     "redux-mw-ws": "^1.2.3",
-    "redux-saga": "^0.16.0",
+    "redux-saga": "^0.16.2",
     "redux-thunk": "^2.3.0",
-    "reselect": "^3.0.1",
-    "sanitize.css": "^6.0.0",
-    "shortid": "^2.2.13",
-    "socket.io": "^2.1.1",
-    "socket.io-client": "^2.1.1",
+    "reselect": "^4.0.0",
+    "sanitize.css": "^8.0.0",
+    "shortid": "^2.2.14",
+    "socket.io": "^2.2.0",
+    "socket.io-client": "^2.2.0",
     "uuid": "^3.3.2",
-    "whatwg-fetch": "^2.0.4",
+    "whatwg-fetch": "^3.0.0",
     "winston": "^2.4.4",
     "ws": "^5.2.2"
   },
   "devDependencies": {
     "@intervolga/optimize-cssnano-plugin": "^1.0.6",
-    "autoprefixer": "^8.6.5",
+    "autoprefixer": "^9.5.1",
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.5",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
@@ -70,42 +70,42 @@
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-3": "^6.24.1",
     "circular-dependency-plugin": "^5.0.2",
-    "clean-webpack-plugin": "^0.1.19",
-    "compression-webpack-plugin": "^1.1.12",
+    "clean-webpack-plugin": "^1.0.1",
+    "compression-webpack-plugin": "^2.0.0",
     "cross-env": "^5.2.0",
-    "css-loader": "^1.0.0",
-    "cssnano": "^4.1.0",
+    "css-loader": "^2.1.1",
+    "cssnano": "^4.1.10",
     "duplicate-package-checker-webpack-plugin": "^3.0.0",
-    "fast-async": "^6.3.7",
-    "file-loader": "^1.1.11",
+    "fast-async": "^6.3.8",
+    "file-loader": "^3.0.1",
     "html-webpack-plugin": "^3.2.0",
     "html-webpack-template": "^6.2.0",
-    "mini-css-extract-plugin": "^0.4.2",
-    "node-sass": "^4.9.3",
-    "optimize-css-assets-webpack-plugin": "^4.0.3",
-    "postcss": "^6.0.23",
-    "postcss-loader": "^2.1.6",
-    "postcss-sass": "^0.3.3",
-    "postcss-scss": "^1.0.6",
-    "react-hot-loader": "^4.3.8",
-    "redux-freeze": "^0.1.5",
+    "mini-css-extract-plugin": "^0.5.0",
+    "node-sass": "^4.12.0",
+    "optimize-css-assets-webpack-plugin": "^5.0.1",
+    "postcss": "^7.0.16",
+    "postcss-loader": "^3.0.0",
+    "postcss-sass": "^0.3.5",
+    "postcss-scss": "^2.0.0",
+    "react-hot-loader": "^4.8.4",
+    "redux-freeze": "^0.1.7",
     "redux-immutable-state-invariant": "^2.1.0",
     "redux-logger": "^3.0.6",
-    "resolve-url-loader": "^2.3.1",
+    "resolve-url-loader": "^3.1.0",
     "sass-loader": "^7.1.0",
-    "style-loader": "^0.21.0",
-    "stylelint": "^9.5.0",
-    "stylelint-config-standard": "^18.2.0",
-    "stylelint-no-unsupported-browser-features": "^3.0.1",
-    "stylelint-order": "^0.8.1",
-    "stylelint-scss": "^3.3.0",
+    "style-loader": "^0.23.1",
+    "stylelint": "^9.10.1",
+    "stylelint-config-standard": "^18.3.0",
+    "stylelint-no-unsupported-browser-features": "^3.0.2",
+    "stylelint-order": "^2.2.1",
+    "stylelint-scss": "^3.6.1",
     "uglifyjs-webpack-plugin": "^1.3.0",
-    "url-loader": "^1.1.1",
-    "webpack": "^4.19.0",
-    "webpack-bundle-analyzer": "^2.13.1",
-    "webpack-cli": "^2.1.5",
-    "webpack-dev-server": "^3.1.8",
-    "webpack-merge": "^4.1.4",
+    "url-loader": "^1.1.2",
+    "webpack": "^4.31.0",
+    "webpack-bundle-analyzer": "^3.3.2",
+    "webpack-cli": "^3.3.2",
+    "webpack-dev-server": "^3.3.1",
+    "webpack-merge": "^4.2.1",
     "webpack-visualizer-plugin": "^0.1.11"
   },
   "browserslist": [
