--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "date-fns": "^1.30.1",
     "dotenv-safe": "^6.1.0",
     "express": "^4.16.4",
+    "express-session": "^1.16.1",
+    "express-socket.io-session": "^1.3.5",
     "express-winston": "^2.6.0",
     "jsonwebtoken": "^8.5.1",
     "lodash-id": "^0.14.0",
@@ -37,6 +39,7 @@
     "morgan": "^1.9.1",
     "normalize.css": "^8.0.1",
     "normalizr": "^3.3.0",
+    "passport.socketio": "^3.7.0",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
@@ -62,6 +65,7 @@
     "@intervolga/optimize-cssnano-plugin": "^1.0.6",
     "autoprefixer": "^9.5.1",
     "babel-core": "^6.26.3",
+    "babel-eslint": "^10.0.1",
     "babel-loader": "^7.1.5",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "babel-plugin-transform-class-properties": "^6.24.1",
@@ -76,6 +80,12 @@
     "css-loader": "^2.1.1",
     "cssnano": "^4.1.10",
     "duplicate-package-checker-webpack-plugin": "^3.0.0",
+    "eslint": "^5.3.0",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-plugin-compat": "^3.1.1",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-jsx-a11y": "^6.1.1",
+    "eslint-plugin-react": "^7.11.0",
     "fast-async": "^6.3.8",
     "file-loader": "^3.0.1",
     "html-webpack-plugin": "^3.2.0",
